// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery handles a click event on the first image in the static gallery 1`] = `
<div>
  <div>
    <div
      className="grey-out"
    />
    <div
      className="pop-out-container"
    >
      <button
        className="previous-image-button"
        onClick={[Function]}
        type="button"
      >
        &lt;
      </button>
      <img
        className="big-image"
        height="526"
        src="mockUrl"
        width="526"
      />
      <button
        className="tiny-flag"
        type="button"
      >
        Flag
      </button>
      <button
        className="next-image-button"
        onClick={[Function]}
        type="button"
      >
        &gt;
      </button>
      <div
        className="close-pop-out"
        onClick={[Function]}
      >
        X
      </div>
    </div>
  </div>
  <div
    className="picture-row"
  >
    <div
      className="picture-column"
    >
      <img
        className="picture-double"
        id={0}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-double"
        id={1}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-single"
        id={2}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-triple"
        id={3}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={4}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={5}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-triple"
        id={6}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={7}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-last picture-triple"
        id={8}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
  </div>
</div>
`;

exports[`Gallery renders 9 image elements when passed an images array of length 9 or more 1`] = `
<div>
  <div />
  <div
    className="picture-row"
  >
    <div
      className="picture-column"
    >
      <img
        className="picture-double"
        id={0}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-double"
        id={1}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-single"
        id={2}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-triple"
        id={3}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={4}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={5}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-triple"
        id={6}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={7}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-last picture-triple"
        id={8}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
  </div>
</div>
`;

exports[`Gallery renders 9 image elements when passed an images array of length 9 or more 2`] = `
<div>
  <div />
  <div
    className="picture-row"
  >
    <div
      className="picture-column"
    >
      <img
        className="picture-double"
        id={0}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-double"
        id={1}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-single"
        id={2}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-triple"
        id={3}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={4}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={5}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
    <div
      className="picture-column"
    >
      <img
        className="picture-triple"
        id={6}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-triple"
        id={7}
        onClick={[Function]}
        src="mockUrl"
      />
      <img
        className="picture-last picture-triple"
        id={8}
        onClick={[Function]}
        src="mockUrl"
      />
    </div>
  </div>
</div>
`;

exports[`Gallery renders nothing when passed an empty images array 1`] = `""`;
